Fix operations order bugs and overflows

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     background-color: gray;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
